delays in route request
